# pendulum

./: .gitignore  README.md  dockerfile  ros2_entrypoint.sh
.citros/: project.json
.citros/parameter_setups/: default_param_setup.json
.citros/simulations/: simulation_double_pendulum.json  simulation_system_with_spring.json
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: help-wanted.md
citros_template/notebooks/: README.md  double_pendulum.ipynb  system_with_spring.ipynb
src/double_pendulum/: package.xml  setup.cfg  setup.py
src/double_pendulum/config/: params.yaml
src/double_pendulum/double_pendulum/: double_pendulum.py  system_model.py
src/double_pendulum/launch/: double_pendulum.launch.py
src/double_pendulum/system_with_spring/: system_model.py
src/double_pendulum_interfaces/: CMakeLists.txt  package.xml
src/double_pendulum_interfaces/msg/: CoordX.msg  CoordY.msg  DoublePendulum.msg
src/system_with_spring/: package.xml  setup.cfg  setup.py
src/system_with_spring/config/: params.yaml
src/system_with_spring/launch/: system_with_spring.launch.py
src/system_with_spring/system_with_spring/: system_model.py  system_with_spring.py
src/system_with_spring_interfaces/: CMakeLists.txt  package.xml
src/system_with_spring_interfaces/msg/: CoordX.msg  CoordY.msg  SpringCoord.msg  SpringSystem.msg
